--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open --port 5200",
-    "stop": "Taskkill /IM node.exe /F",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -33,7 +32,7 @@
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.6",
+    "@angular-devkit/build-angular": "^0.901.6",
     "@angular/cli": "^9.1.6",
     "@angular/compiler-cli": "^9.1.7",
     "@angular/language-service": "^9.1.7",
@@ -52,7 +51,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "webpack": "^4.43.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.43.0"
   }
 }
